<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    tools:context=".chatInicial">

    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#757575"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iconBooks"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/baseline_book_24"
            android:contentDescription="@string/livro" />


        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="240dp"
            android:backgroundTint="@android:color/black"
            android:text="@string/login_button"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <!-- Área Central -->
    <FrameLayout
        android:id="@+id/centralArea"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#212121"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/inputContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Barra de Entrada Inferior -->
    <LinearLayout
        android:id="@+id/inputContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#BDBDBD"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/attachIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/baseline_attach_file_24"
            android:contentDescription="@string/anexo" />

        <EditText
            android:id="@+id/inputField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/estudar"
            android:background="@android:color/transparent"
            android:autofillHints="estudo"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:inputType="text" />

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:backgroundTint="#757575"
            android:text="@string/ok"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:padding="8dp"
            android:layout_marginStart="8dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
