<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#404040"
    tools:context=".minha_conta">

    <TextView
        android:id="@+id/LogOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/logoff"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/voltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voltar"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/caixaPrincipal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        app:layout_constraintTop_toBottomOf="@id/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minha_conta"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:layout_marginBottom="16dp" />

            <ImageView
                android:id="@+id/iconPerfil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/user_icon"
                android:src="@drawable/user" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/nomeUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/baseline_person_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="24dp"
                android:gravity="center_vertical">


                <TextView
                    android:id="@+id/emailUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:drawableStartCompat="@drawable/baseline_email_24" />
            </LinearLayout>

            <Button
                android:id="@+id/btnRedefinirSenha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/redefinir_senha"
                android:backgroundTint="@android:color/black"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
